directors pseudo element overlapping issue solved

--- a/src/components/pages/About/About.module.scss
+++ b/src/components/pages/About/About.module.scss
@@ -4,7 +4,6 @@
   position: relative;
   min-height: 600px;
   background-color: $midnightGreen;
-  z-index: 9999;
 
   .wrapper {
     display: grid;
